DO280/res-manifest/network-access/my-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-demo
  name: my-demo
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: my-demo
