DO280/res-manifest/network-access/my-demo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: my-demo
  name: my-demo
spec:
  host: my-demo-test-dep.apps.ocp4.example.com
  port:
    targetPort: 5000
  to:
    kind: Service
    name: my-demo
    weight: 100
  wildcardPolicy: None
